# def_simulation

./: CMakeLists.txt  README.md  package.xml
CAD_files/: Adapter_camera.ipt  EdmundOptics_lens.ipt  Genie-Nano-Sony_C-mount.ipt  MX-106T.ipt  Pointing_Finger.ipt  Pointing_Finger.stl  Pointing_Finger.stp  Pointing_Finger2.ipt  assembly_arm_1.iam  assembly_arm_2.iam  assembly_camera.iam  assembly_hand.iam  assembly_robot_arm.iam  bearing_mount_part_1.ipt  bearing_mount_part_2.ipt  connection_hand.ipt  connection_hand_2.ipt  connection_hand_camera.ipt  connection_linkFour.ipt  cube_square_tube.ipt  dulli_hand_volumen.ipt  dynamixel_pro_assembly.iam  dynamixel_pro_frame.iam  dynamixel_pro_frame_part1.ipt  dynamixel_pro_frame_part2.ipt  dynamixel_pro_frame_part3.ipt  dynamixel_pro_frame_shaft.ipt  frame_mx108.ipt  frp54-h210.ipt  h54-200-s500-r.ipt  square_tube.ipt
config/: def_controllers.yaml  robotic_arm_control.yaml  trajectory_control.yaml
launch/: display.launch  dyn_ef_robot_bringup_gazebo.launch  gazebo.launch  gazebo_moveit_test.launch  launch_our_world.launch
meshes/: Pointing_Finger2.stl  Pointing_Finger2_simple.stl  assembly_arm_1_simple.stl  assembly_arm_2.stl  assembly_arm_2_simple.stl  assembly_base.stl  assembly_hand_simple.stl  assembly_link2.stl  assembly_link2_simple.stl  assembly_linkFive.stl  assembly_linkFour.stl  assembly_linkThree.stl  assembly_linkTwo.stl  dynamixel_pro_frame.stl  dynamixel_pro_frame_simple.stl  frame_mx108.stl  frame_mx108_simple.stl  h54-200-s500-r.stl  h54-200-s500-r_simple.stl
models/: our_world.world
(+93 files in other folders)
