<package>
  <name>dynamic_end_effector</name>
  <version>0.3.0</version>

  <description>This package contains everything related to dynamic_end_effector.</description>
  <author email="simalexteiwes@gmail.com">Simon Teiwes</author>

  <maintainer email="simalexteiwes@gmail.com">Simon Teiwes</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>controller_manager</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
